--- a/package.json
+++ b/package.json
@@ -8,10 +8,17 @@
   ],
   "main": "src/index.js",
   "dependencies": {
+    "@emotion/react": "11.8.2",
+    "@emotion/styled": "11.8.1",
+    "@material-ui/core": "4.12.3",
+    "@material-ui/icons": "4.11.2",
+    "@mui/icons-material": "5.5.1",
+    "@mui/material": "5.5.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "4.3.1",
-    "react-scripts": "4.0.0"
+    "react-scripts": "4.0.0",
+    "styled-components": "5.3.3"
   },
   "devDependencies": {
     "@babel/runtime": "7.13.8",
