--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "@emotion/react": "11.8.2",
     "@emotion/styled": "11.8.1",
     "@material-ui/core": "4.12.3",
+    "@material-ui/data-grid": "4.0.0-alpha.37",
     "@material-ui/icons": "4.11.2",
     "@mui/icons-material": "5.5.1",
     "@mui/material": "5.5.1",
+    "@mui/x-data-grid": "5.6.1",
+    "@mui/x-data-grid-generator": "5.6.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "4.3.1",
