--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "4.3.1",
+    "react-redux": "7.2.8",
     "react-router-dom": "6.2.2",
     "react-scripts": "4.0.0",
     "styled-components": "5.3.3"
